# arduino-flexact

./: CMakeLists.txt  keywords.txt  library.properties
src/: FlexActuator.cpp  FlexActuator.h  FlexPipe.cpp  FlexPipe.h
